# actr-ts

./: .gitignore  .npmignore  Cargo.toml  README.md  README.zh-CN.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
examples/: README.md
examples/echo-client/: Actr.toml  index.ts
examples/echo-client/protos/local/: local.proto
examples/echo-client/protos/remote/echo-twice-server/: echo-twice.proto
examples/echo-twice-server/: Actr.toml  index.ts
scripts/: codegen.js  strip-napi-version-check.js
skills/actr-ts-codegen/: SKILL.md
skills/actr-ts-codegen/agents/: openai.yaml
skills/actr-ts-codegen/references/: output-spec.md
skills/actr-ts-codegen/scripts/: generate-generated.js
src/: basic.test.ts  context.rs  error.rs  lib.rs  logger.rs  runtime.rs  types.rs  workload.rs
typescript/: index.ts  native.d.ts  node.ts  ref.ts  system.ts  types.ts  workload.ts
